--- a/static_workfile/css/matches/players_selector.css
+++ b/static_workfile/css/matches/players_selector.css
@@ -80,7 +80,9 @@ body {
 }
 
 .options-bar {
-    width: 100%;
+    padding: 0 12px;
+    width: calc(100% - 24px);
+
     height: 48px;
     background-color: #1b1b1b;
 
