--- a/templates/matches/players_selector.html
+++ b/templates/matches/players_selector.html
@@ -26,11 +26,9 @@
 
         <div class="flex-column" style="margin-top: 48px;">
             <div class="flex-row" style="width: calc(100% - 32px); margin: 0 16px; height: 48px;">
-                <p class="box-48"></p>
-
                 <p class="dm-sans-600-normal" style="font-size: 20px; margin: 0;">{{ team_name }}</p>
 
-                <p class="dm-sans-600-normal flex-center box-48" style="font-size: 36px; margin: 0;">+</p>
+                <a href="{{ match_url }}" class="dm-sans-600-normal done-button" style="margin-left: auto;">Done</a>
             </div>
 
             <hr class="divider">
