--- a/templates/matches/players_selector.html
+++ b/templates/matches/players_selector.html
@@ -28,7 +28,7 @@
             <div class="flex-row" style="width: calc(100% - 32px); margin: 0 16px; height: 48px;">
                 <p class="dm-sans-600-normal" style="font-size: 20px; margin: 0;">{{ team_name }}</p>
 
-                <a href="{{ match_url }}" class="dm-sans-600-normal done-button" style="margin-left: auto;">Done</a>
+                <p id="done-button" class="dm-sans-600-normal done-button" style="margin-left: auto;">Klaar</p>
             </div>
 
             <hr class="divider">
