--- a/templates/authentication/registration/password_reset_confirm.html
+++ b/templates/authentication/registration/password_reset_confirm.html
@@ -3,19 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
         <title>Login</title>
         <meta name="description" content="Registration">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="/static/css/authentication/login_registration.css">
-        <link rel="stylesheet" href="/static/css/color/color.css">
 
-        <link rel="stylesheet" href="https://use.typekit.net/pbm5dyg.css">
-        <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
-
-        <link rel="manifest" href="/static/json/manifest.json">
-        <script src="/static/js/pwa/service-worker.js"></script>
+        {% include 'common/imports.html' %}
     </head>
     <body style="background-color: #1b1b1b; color: var(--text-color)">
         {% include 'overlays/navbar.html' %}
