--- a/templates/hub/catalog.html
+++ b/templates/hub/catalog.html
@@ -3,18 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>{{ title }}</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <link rel="stylesheet" href="/static/css/teams/index.css">
-        <link rel="stylesheet" href="/static/css/color/color.css">
 
-        <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
-
-        <link rel="manifest" href="/static/json/manifest.json">
-        <script src="/static/js/pwa/service-worker.js"></script>
+        {% include 'common/imports.html' %}
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
