--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-    <meta charset="utf-8">
     <title>Login</title>
     <meta name="description" content="Login pagina voor korfbal wedstrijd tracker">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link rel="stylesheet" href="/static/css/authentication/login_registration.css">
-    <link rel="stylesheet" href="/static/css/color/color.css">
-    <link rel="stylesheet" href="https://use.typekit.net/pbm5dyg.css">
 
-    <link rel="icon" href="/static/images/logo/KWT_logo.png" type="image/x-icon">
-
-    <link rel="manifest" href="/static/json/manifest.json">
-    <script src="/static/js/pwa/service-worker.js"></script>
+    {% include 'common/imports.html' %}
 </head>
 <body class="background-color">
     {% include 'overlays/navbar.html' %}
