--- a/static_workfile/css/authentication/login_registration.css
+++ b/static_workfile/css/authentication/login_registration.css
@@ -8,6 +8,8 @@ body {
     box-sizing: border-box;
     position: relative;
     width: 100%;
+
+    font-family: "DM Sans", sans-serif;
 }
 
 .background-color {
@@ -70,7 +72,6 @@ body {
 
 .CHK2-H {
     font-size: 32px;
-    font-family: termina, sans-serif; 
     font-weight: 400;
     font-style: normal;
     letter-spacing: .01em;
@@ -84,7 +85,6 @@ body {
 
 .CHK2-H2 {
     font-size: calc((1.5 - 1) * 1.2vh + 1rem);
-    font-family: termina, sans-serif; 
     font-weight: 700;
     font-style: normal;
     letter-spacing: .01em;
@@ -110,8 +110,7 @@ body {
 }
 
 .CHK2-P {
-    font-size: 12px;
-    font-family: termina, sans-serif; 
+    font-size: 14px;
     font-weight: 400;
     font-style: normal;
     letter-spacing: .01em;
@@ -190,10 +189,9 @@ body {
 .form-container li {
     margin: 0;
     
-    font-family: termina, sans-serif; 
     font-weight: 400;
     font-style: normal;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .CHK2-button {
@@ -205,7 +203,7 @@ body {
     text-decoration: none;
     display: inline-block;
 
-    font-size: 16px;
+    font-size: 18px;
 
     width: 100%;
     height: 48px;
@@ -214,7 +212,6 @@ body {
     margin-top: 12px;
     margin-bottom: 6px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
@@ -255,5 +252,5 @@ body {
 }
 
 .class {
-    font-size: 16px;
+    font-size: 18px;
 }
