--- a/static_workfile/css/clubs/detail.css
+++ b/static_workfile/css/clubs/detail.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: termina, sans-serif;
+    font-family: "DM Sans", sans-serif;
 }
 
 .flex-row {
@@ -67,7 +67,7 @@ a {
     background: transparent;
     transition: background 0.3s ease;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .button.active {
@@ -165,12 +165,11 @@ a {
     color: black;
     text-decoration: none;
 
-    font-size: 14px;
+    font-size: 16px;
 
     width: 112px;
     height: 42px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
