--- a/static_workfile/css/index.css
+++ b/static_workfile/css/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: termina, sans-serif;
+    font-family: "DM Sans", sans-serif;
 }
 
 .flex-row {
@@ -39,7 +39,7 @@ body {
 
 h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 26px;
 }
 
 a {
