--- a/static_workfile/css/matches/detail.css
+++ b/static_workfile/css/matches/detail.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: termina, sans-serif;
+    font-family: "DM Sans", sans-serif;
 }
 
 .flex-row {
@@ -67,7 +67,7 @@ a {
     background: transparent;
     transition: background 0.3s ease;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .button.active {
@@ -81,7 +81,7 @@ a {
 }
 
 .event-type {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -94,7 +94,7 @@ a {
 
 .description {
     margin: 0;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .current-score {
@@ -143,12 +143,11 @@ select {
     color: var(--text-color);
     text-decoration: none;
 
-    font-size: 16px;
+    font-size: 18px;
 
     width: 256px;
     height: 48px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
@@ -169,12 +168,11 @@ select {
     color: black;
     text-decoration: none;
 
-    font-size: 14px;
+    font-size: 16px;
 
     width: 112px;
     height: 42px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
