--- a/static_workfile/css/teams/index.css
+++ b/static_workfile/css/teams/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: termina, sans-serif;
+    font-family: "DM Sans", sans-serif;
 }
 
 .flex-row {
@@ -75,7 +75,7 @@ a {
     background: transparent;
     transition: background 0.3s ease;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .button.active {
@@ -191,7 +191,7 @@ a {
 
     color: #313131;
 
-    font-size: 16px;
+    font-size: 18px;
 
     padding: 8px;
 
@@ -219,7 +219,7 @@ a {
     text-decoration: none;
     display: inline-block;
 
-    font-size: 16px;
+    font-size: 18px;
 
     width: 100%;
     height: 48px;
@@ -228,7 +228,6 @@ a {
     margin-top: 12px;
     margin-bottom: 6px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
@@ -381,7 +380,7 @@ a {
     justify-content: center;
     align-items: center;
 
-    font-size: 16px;
+    font-size: 18px;
 
     width: 100%;
     height: 48px;
@@ -390,7 +389,6 @@ a {
     margin-top: 12px;
     margin-bottom: 6px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
@@ -431,7 +429,7 @@ a {
     width: 0;
     opacity: 0;
     transition: width 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    font-size: 14px;
+    font-size: 16px;
     height: 100%;
 }
 
@@ -463,7 +461,7 @@ a {
 }
 
 .past-request-text {
-    font-size: 14px;
+    font-size: 16px;
     padding: 5px 0 5px 8px;
     margin: 0;
     margin-left: 4px;
@@ -475,7 +473,7 @@ a {
 }
 
 .remove-button {
-    font-size: 14px;
+    font-size: 16px;
     margin: 0;
     padding: 5px 8px;
 }
@@ -486,7 +484,8 @@ select {
     -moz-appearance: none;
     background-color: transparent;
     border: none;
-    font-size: 24px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 26px;
     font-weight: 600;
     padding: 0 1em 0 0;
     margin: 0;
@@ -499,7 +498,7 @@ select {
 }
 
 option {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
 }
 
@@ -507,7 +506,7 @@ option {
     border: 2px solid var(--button-color);
     border-radius: 4px;
     padding: 4px 8px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 300;
 
     width: calc(50% - 24px);
@@ -541,12 +540,11 @@ option {
     color: black;
     text-decoration: none;
 
-    font-size: 14px;
+    font-size: 16px;
 
     width: 112px;
     height: 42px;
 
-    font-family: termina, sans-serif;
     font-weight: 400;
     font-style: normal;
 
