--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="/static/css/teams/index.css">
 
         {% include 'common/imports.html' %}
+
+        <script src="https://cdn.jsdelivr.net/npm/heic2any@0.0.3/dist/heic2any.min.js"></script>
     </head>
     <body>
         {% include 'overlays/navbar.html' %}
