# Switch over to webpack bundel

--- a/templates/matches/players_selector.html
+++ b/templates/matches/players_selector.html
@@ -33,8 +33,7 @@
             <p style="display: none;" id="{{ player_group.starting_type.id_uuid }}">{{ player_group.id_uuid }}</p>
         {% endfor %}
 
-        <script src="/static/js/common/truncateMiddle.js"></script>
-        <script src="/static/js/matches/players_selector.js"></script>
+        <script src="/static/webpack_bundles/players_selector.bundle.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
