--- a/templates/hub/catalog.html
+++ b/templates/hub/catalog.html
@@ -62,7 +62,7 @@
 
         {% csrf_token %}
 
-        <script src="/static/js/hub/catalog.js"></script>
+        <script src="/static/webpack_bundles/hub_catalog.bundle.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
