--- a/templates/matches/detail.html
+++ b/templates/matches/detail.html
@@ -62,14 +62,7 @@
 
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
-        <script src="/static/js/common/common.js"></script>
-        <script src="/static/js/common/truncateMiddle.js"></script>
-        <script src="/static/js/common/updateStatastics.js"></script>
-        <script src="/static/js/matches/common/countdownTimer.js"></script>
-        <script src="/static/js/matches/common/onPlayerSelectChange.js"></script>
-        <script src="/static/js/matches/common/playerGroups.js"></script>
-        <script src="/static/js/matches/common/events.js"></script>
-        <script src="/static/js/matches/detail.js"></script>
+        <script src="/static/webpack_bundles/match_detail.bundle.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
