--- a/templates/matches/tracker.html
+++ b/templates/matches/tracker.html
@@ -55,12 +55,7 @@
             <div>
         </div>
 
-        <script src="/static/js/common/truncateMiddle.js"></script>
-        <script src="/static/js/matches/common/countdownTimer.js"></script>
-        <script src="/static/js/matches/common/onPlayerSelectChange.js"></script>
-        <script src="/static/js/matches/common/playerGroups.js"></script>
-        <script src="/static/js/matches/common/events.js"></script>
-        <script src="/static/js/matches/tracker.js"></script>
+        <script src="/static/webpack_bundles/match_tracker.bundle.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
