--- a/templates/profile/index.html
+++ b/templates/profile/index.html
@@ -65,11 +65,7 @@
         
         {% csrf_token %}
 
-        <script src="/static/js/common/common.js"></script>
-        <script src="/static/js/common/truncateMiddle.js"></script>
-        <script src="/static/js/common/updateMatches.js"></script>
-        <script src="/static/js/common/updateTeam.js"></script>
-        <script src="/static/js/profile/profile-detail.js"></script>
+        <script src="/static/webpack_bundles/profile_detail.bundle.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
