--- a/templates/teams/detail.html
+++ b/templates/teams/detail.html
@@ -43,12 +43,7 @@
 
         <p style="display: none;" id="user_id">{{ request.user.id }}</p>
 
-        <script src="/static/js/common/common.js"></script>
-        <script src="/static/js/common/truncateMiddle.js"></script>
-        <script src="/static/js/common/updateMatches.js"></script>
-        <script src="/static/js/common/updateStatastics.js"></script>
-        <script src="/static/js/common/setup_follow_button.js"></script>
-        <script src="/static/js/teams/detail.js"></script>
+        <script src="/static/webpack_bundles/teams_detail.bundle.js"></script>
         <script src="/static/js/programs/mobile_view.js"></script>
     </body>
 </html>
