--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -24,7 +24,7 @@
                         <div class="flex-column" style="margin-bottom: 32px;">
                             <h1 class="CHK2-H" style="margin: 0;">Hallo!</h1>
                             <div>
-                                <p class="CHK2-P" style="color: lightgray;">Registreer je voor de Korfbal wedstrijd tracker</p>
+                                <p class="CHK2-P" style="color: lightgray;">Registreer je voor de korfbal wedstrijd tracker</p>
                             </div>
                         </div>
     
